src/test/ui/parser/keyword-trait-as-identifier.stderr
error: expected pattern, found keyword `trait`
  --> $DIR/keyword-trait-as-identifier.rs:4:9
   |
LL |     let trait = "foo";
   |         ^^^^^ expected pattern

error: aborting due to previous error

